--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .centered {
+    @apply flex items-center justify-center;
+  }
+}
