[feat] : 커스텀 스타일 이름 변경(#27)

--- a/src/main.css
+++ b/src/main.css
@@ -6,7 +6,13 @@
   .centered {
     @apply flex items-center justify-center;
   }
-  .height-with-header {
+  .height-without-header {
     height: calc(100vh - 64px);
+  }
+  .height-without-footer {
+    height: calc(100vh - 84px);
+  }
+  .height-content {
+    height: calc(100vh - 84px - 64px);
   }
 }
