--- a/src/main.css
+++ b/src/main.css
@@ -13,6 +13,6 @@
     height: calc(100vh - 84px);
   }
   .height-content {
-    height: calc(100vh - 84px - 64px);
+    height: calc(100vh - 220px );
   }
 }
