[feat] : 로그인/회원가입 컬러 수정(#9)

--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply text-text;
+  }
+}
+
 @layer utilities {
   .centered {
     @apply flex items-center justify-center;
