--- a/src/main.css
+++ b/src/main.css
@@ -82,6 +82,7 @@ body,
 html {
   font-family: 'MaruBuri', sans-serif;
 }
+
 @media (min-width: 320px) {
   html {
     font-size: 12px;
@@ -92,9 +93,15 @@ html {
   html {
     font-size: 14px;
   }
+
+  @media (min-height: 850px) {
+    html {
+      font-size: 15px;
+    }
+  }
 }
 
-@media (min-width: 375px) {
+@media (min-width: 390px) {
   html {
     font-size: 16px;
   }
