[feat] : 스크롤 숨기기 기능 구현

--- a/src/main.css
+++ b/src/main.css
@@ -112,3 +112,12 @@ html {
     font-size: 16px;
   }
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
