[refactor] : list-none 스타일을 전역에서 설정, 사용하지 않는 유틸리티 스타일 제거

--- a/src/main.css
+++ b/src/main.css
@@ -5,13 +5,11 @@
 @layer base {
   body {
     @apply text-text;
+    @apply list-none;
   }
 }
 
 @layer utilities {
-  .centered {
-    @apply flex items-center justify-center;
-  }
   .height-without-header {
     height: calc(100vh - 4rem);
   }
@@ -78,10 +76,10 @@
     url(https://hangeul.pstatic.net/hangeul_static/webfont/MaruBuri/MaruBuri-ExtraLight.ttf) format('truetype');
 }
 
-body,
+/* body,
 html {
   font-family: 'MaruBuri', sans-serif;
-}
+} */
 
 @media (min-width: 320px) {
   html {
