[refactor] : 전역 폰트사이즈 수정 - 모바일 별 반응형 폰트 사이즈를 수정함 - 사용하지 않는 폰트 제거 - 포커스 시 생기는 아웃라인을 제거함

--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,10 @@
   body {
     @apply text-text;
     @apply list-none;
+  }
+  input,
+  textarea,
+  button {
     @apply focus:outline-none;
   }
 }
