[fix] : 새로운 도서 등록시 상세조회페이지에서 줄거리가 길면 책 저장 버튼이 사라지는 오류 수정

--- a/src/main.css
+++ b/src/main.css
@@ -25,10 +25,15 @@
     height: calc(100vh - 9rem);
   }
 }
-
-/* 미니 : 350 - 375 */
+/* 초미니 : 320 이상 */
+/* 미니 : 350 이상 */
 /* 기본 : 385 이상  */
 /* 프로 : 405 이상 */
+@media (min-width: 320px) {
+  html {
+    font-size: 13px;
+  }
+}
 
 @media (min-width: 350px) {
   html {
