--- a/src/main.css
+++ b/src/main.css
@@ -12,6 +12,12 @@
   button {
     @apply focus:outline-none;
   }
+
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button {
+    @apply appearance-none;
+    margin: 0;
+  }
 }
 
 @layer utilities {
