[feat] : 디바이스에 따라 헤더 사이즈를 변경함

--- a/src/main.css
+++ b/src/main.css
@@ -21,7 +21,10 @@
 }
 
 @layer utilities {
-  .height-without-header {
+  .height-without-headerIOS {
+    height: calc(100vh - 6rem);
+  }
+  .height-without-headerAnd {
     height: calc(100vh - 4rem);
   }
   .height-without-footerIOS {
