[refactor] : 디바이스에 따라 content 사이즈를 변경

--- a/src/main.css
+++ b/src/main.css
@@ -33,7 +33,10 @@
   .height-without-footerAnd {
     height: calc(100vh - 5.5rem);
   }
-  .height-content {
+  .height-contentAnd {
+    height: calc(100vh - 9rem);
+  }
+  .height-contentIOS {
     height: calc(100vh - 9rem);
   }
 }
