--- a/src/main.css
+++ b/src/main.css
@@ -81,3 +81,10 @@
 .scrollbar-hide::-webkit-scrollbar {
   display: none;
 }
+
+@font-face {
+  font-family: 'HakgyoansimNadeuriTTF-B';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2408-5@1.0/HakgyoansimNadeuriTTF-B.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
