[refactor] : 색상 코드 변경

--- a/src/main.css
+++ b/src/main.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     /* 색상 */
-    --color-primary: #6fc444;
+    --color-primary: #8bcfa7;
     --color-primary-light: #a6d68e;
     --color-secondary: #f4f5ce;
     --color-secondary-light: #aedef5;
