[refactor] : 전역 폰트 색상 수정

--- a/src/main.css
+++ b/src/main.css
@@ -12,7 +12,7 @@
   }
 
   * {
-    @apply font-pretendard text-text;
+    @apply font-pretendard text-black;
     @apply list-none focus:outline-none;
   }
 }
