[refactor] : 전체 배경색상, 텍스트 색상 지정, 전체 텍스트 선택 비활성화

--- a/src/main.css
+++ b/src/main.css
@@ -12,8 +12,8 @@
   }
 
   * {
-    @apply font-pretendard text-black;
-    @apply list-none focus:outline-none;
+    @apply bg-neutral-0 font-pretendard text-neutral-100;
+    @apply select-none list-none focus:outline-none;
   }
 }
 
