[feat] : 하이라이트 컴포넌트 구현
- 기존 하이라이트 컴포넌트에서 문자열을 children으로 받을 수 있도록 구현
- 모든 태그에 적용된 배경색 제거

--- a/src/main.css
+++ b/src/main.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 
 @layer base {
+  * {
+    @apply font-pretendard text-neutral-100;
+    @apply select-none list-none focus:outline-none;
+  }
+
   :root {
     /* 색상 */
     --color-primary: #8bcfa7;
     --color-primary-light: #a6d68e;
     --color-secondary: #f4f5ce;
     --color-secondary-light: #aedef5;
-  }
-
-  * {
-    @apply bg-neutral-0 font-pretendard text-neutral-100;
-    @apply select-none list-none focus:outline-none;
   }
 }
 
