[fix] : 전역 스타일링에 svg 태그 제외

--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer base {
-  * {
+  *:not(svg *) {
     @apply font-pretendard text-neutral-100;
     @apply select-none list-none focus:outline-none;
   }
